--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent
+        from repository -->
     </parent>
     <groupId>se499</groupId>
     <artifactId>Kayaan-Backend</artifactId>
