--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.4.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
