--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,6 @@ application:
       expiration: 86400000
       refresh-token:
         expiration: 604800000
+avatar:
+  upload:
+    dir: uploads/avatars
