fix: แก้ไข avatar upload endpoint validation และ error handling
- เพิ่ม @Valid และ @NotBlank validation ใน AvatarController
- ระบุ MediaType.APPLICATION_JSON_VALUE ชัดเจน
- เพิ่ม error handling configuration ใน application.yml
- เพิ่ม debug logging สำหรับ troubleshooting
- สร้าง test script สำหรับทดสอบ endpoint
- แก้ไข field names เป็น fileName และ contentType ที่ถูกต้อง

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,20 @@ spring:
     locations: classpath:db/migration
     baseline-on-migrate: true
 
+# Error handling configuration
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
+    include-stacktrace: never
+
+# Logging configuration for debugging
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.springframework.validation: DEBUG
+    se499.kayaanbackend.controller.AvatarController: DEBUG
+
 application:
   security:
     jwt:
