fix: แก้ไข Supabase Invalid Compact JWS error
- เปลี่ยน endpoint เป็น /storage/v1/object/upload/sign/
- เพิ่ม trim() สำหรับ service key
- เพิ่ม debug logging พร้อม mask service key
- อัปเดต environment variables ใน application.yml
- เพิ่ม curl example สำหรับทดสอบ Supabase API โดยตรง
- เพิ่ม troubleshooting guide สำหรับ Invalid Compact JWS

--- a/env.example
+++ b/env.example
@@ -1,6 +1,8 @@
 # Supabase Configuration
 # Get your service key from Supabase Dashboard > Settings > API
+SUPABASE_URL=https://ljapyahphaohoanshamz.supabase.co
 SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+SUPABASE_BUCKET_AVATARS=avatars
 
 # Database Configuration (optional - already in application.yml)
 # SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3307/kayaan_db
