fix: แก้ไข property mapping และเพิ่ม URL encoding
- เปลี่ยน @Value จาก kayaan.supabase เป็น supabase
- อัปเดต application.yml ให้ตรงกับ @Value
- เพิ่ม URL encoding ทีละ segment
- เพิ่ม sanity logs สำหรับ JWT key validation
- เพิ่ม upsert field ใน request body
- รองรับทั้ง signedUrl และ signedURL ใน response
- เพิ่ม health check curl example

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,13 +44,15 @@ application:
       refresh-token:
         expiration: 604800000
 
+supabase:
+  url: ${SUPABASE_URL:https://ljapyahphaohoanshamz.supabase.co}
+  serviceKey: ${SUPABASE_SERVICE_KEY:}
+
 kayaan:
    supabase:
-    url: ${SUPABASE_URL:https://ljapyahphaohoanshamz.supabase.co}
-    serviceKey: ${SUPABASE_SERVICE_KEY:}
     buckets:
       avatars: ${SUPABASE_BUCKET_AVATARS:avatars}
-      ai: ai-outputs
+      ai: ${SUPABASE_BUCKET_AI:ai-outputs}
     realtime:
       enabled: false
       groupChannelPrefix: groups.
