fix: add default empty value for SUPABASE_SERVICE_KEY to prevent placeholder resolution error

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ application:
 
 supabase:
   url: ${SUPABASE_URL:https://ljapyahphaohoanshamz.supabase.co}
-  serviceKey: ${SUPABASE_SERVICE_KEY}
+  serviceKey: ${SUPABASE_SERVICE_KEY:}
 
 kayaan:
    supabase:
