fix: แก้ไข Supabase signed URL path ให้ถูกต้อง
- แก้ไข SupabaseStorageAdapter.createSignedUploadUrl() ให้เติม /storage/v1 เข้าไปใน URL
- แก้ไข SecurityConfiguration ให้ /api/auth/** เป็น permitAll
- ทดสอบ avatar upload flow ทำงานได้สมบูรณ์แล้ว
- เปลี่ยนจาก: https://project.supabase.co/object/upload/sign/...
- เป็น: https://project.supabase.co/storage/v1/object/upload/sign/...

Resolves: 404 'requested path is invalid' error จาก Supabase

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     name: Kayaan-Backend
   servlet:
     multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     url: jdbc:mysql://localhost:3307/kayaan_db?createDatabaseIfNotExist=true&autoReconnect=true&characterEncoding=UTF-8&allowMultiQueries=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -38,6 +38,8 @@ logging:
   level:
     org.springframework.web: DEBUG
     org.springframework.validation: DEBUG
+    org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: TRACE
+    org.springframework.security: DEBUG
     se499.kayaanbackend.controller.AvatarController: DEBUG
 
 application:
