--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,11 +18,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
+        ddl-auto: update
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: false
   flyway:
-    enabled: true
+    enabled: false
     locations: classpath:db/migration
     baseline-on-migrate: true
     out-of-order: true
