OpenAI API and Cache input set up for reducing the cost of api

--- a/env.example
+++ b/env.example
@@ -11,3 +11,11 @@ SUPABASE_BUCKET_AI=ai-outputs
 
 # JWT Configuration (optional - already in application.yml)
 # APPLICATION_SECURITY_JWT_SECRET_KEY=your_jwt_secret_key_here
+
+# OpenAI Configuration
+# Get your API key from OpenAI Dashboard > API Keys
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_MODEL=gpt-5-nano
+OPENAI_MAX_TOKENS=256
+OPENAI_TEMPERATURE=0.1
+OPENAI_TIMEOUT_SECONDS=30
