--- a/src/main/resources/application-ai-generation.yml
+++ b/src/main/resources/application-ai-generation.yml
@@ -18,9 +18,9 @@ ai:
     # OpenAI settings
     openai:
       api-key: ${OPENAI_API_KEY:your-openai-api-key-here}
-      model: "gpt-3.5-turbo"
-      max-tokens: 2000
-      temperature: 0.7
+      model: "gpt-5-nano"
+      max-tokens: 256
+      temperature: 0.1
       timeout-seconds: 30
     
     # Supabase settings
