Update AI generation configuration and enhance controllers
- Updated AI generation configuration with environment variables instead of hardcoded secrets
- Enhanced AIGenerationController and AIJobController with improved functionality
- Modified QuizController for better quiz handling
- Updated SecurityConfiguration for enhanced security
- Added AIGenerationServiceImpl for improved service implementation
- Added .gitignore rules for local configuration files

Security: Removed hardcoded API keys and replaced with environment variables

--- a/src/main/resources/application-ai-generation.yml
+++ b/src/main/resources/application-ai-generation.yml
@@ -17,7 +17,7 @@ ai:
     
     # OpenAI settings
     openai:
-      api-key: ${OPENAI_API_KEY:your-openai-api-key-here}
+      api-key: ${OPENAI_API_KEY:your-api-key-here}
       model: "gpt-5-nano"
       max-tokens: 256
       temperature: 0.1
