--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,9 +72,9 @@ avatar:
 # AI Configuration
 ai:
   openai:
-    api-key: ${OPENAI_API_KEY:your-openai-api-key-here}
-    model: ${OPENAI_MODEL:gpt-5-nano}
-    max-tokens: ${OPENAI_MAX_TOKENS:256}
+    api-key: ${OPENAI_API_KEY:your-api-key-here}
+    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+    max-tokens: ${OPENAI_MAX_TOKENS:600}
     temperature: ${OPENAI_TEMPERATURE:0.1}
     timeout-seconds: ${OPENAI_TIMEOUT_SECONDS:30}
   
