feat: enhance AI generation service and security configuration
- Update AI generation controller and service
- Configure security settings
- Use environment variable for OpenAI API key for security

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,7 +72,7 @@ avatar:
 # AI Configuration
 ai:
   openai:
-    api-key: ${OPENAI_API_KEY:your-api-key-here}
+    api-key: ${OPENAI_API_KEY:your-openai-api-key-here}
     model: ${OPENAI_MODEL:gpt-3.5-turbo}
     max-tokens: ${OPENAI_MAX_TOKENS:600}
     temperature: ${OPENAI_TEMPERATURE:0.1}
